[gd_scene load_steps=3 format=3 uid="uid://coeukigyvkutw"]

[ext_resource type="Script" uid="uid://doj6lo1en8hy" path="res://scripts/recipe_note_panel.gd" id="1_wpyrx"]
[ext_resource type="Texture2D" uid="uid://cmkws66l282t5" path="res://assets/massa1.png" id="2_sd5b1"]

[node name="RecipeNotePanel" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_right = -50.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_wpyrx")

[node name="NoteBackground" type="NinePatchRect" parent="."]
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
mouse_filter = 0
texture = ExtResource("2_sd5b1")
region_rect = Rect2(0, 0, 32, 32)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="MarginContainer" type="MarginContainer" parent="NoteBackground"]
layout_mode = 0
offset_right = 180.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ScrollContainer" type="ScrollContainer" parent="NoteBackground/MarginContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
mouse_filter = 2
follow_focus = true
horizontal_scroll_mode = 0

[node name="ContentBox" type="VBoxContainer" parent="NoteBackground/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 4

[node name="RecipeTitle" type="RichTextLabel" parent="NoteBackground/MarginContainer/ScrollContainer/ContentBox"]
layout_mode = 2
size_flags_vertical = 6
mouse_filter = 2
fit_content = true

[node name="IngredientList" type="RichTextLabel" parent="NoteBackground/MarginContainer/ScrollContainer/ContentBox"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="PreparationSteps" type="RichTextLabel" parent="NoteBackground/MarginContainer/ScrollContainer/ContentBox"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
